HB-5116: more refactoring styles for rebranding

--- a/src/styles/modules/_m-button.sass
+++ b/src/styles/modules/_m-button.sass
@@ -23,7 +23,7 @@
     +border(2px solid $color-gray-darker)
     color: $color-gray-darker
 
-    .#{_b(button)} + _e(social-icon)
+    .#{$prefix-component}icon
       g
         fill: $color-white
 
