--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -6,7 +6,7 @@
 
   +e(text-input) > div
     background: $color-white
-    border-radius: $radius-default
+    border-radius: $radius_l
 
   input[type="text"]
     cursor: default
