--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -9,7 +9,7 @@
     +rem-fallback('height', $height-input)
     +rem-fallback('padding', $space-xs)
     background-color: $color-white
-    border-radius: $radius-default
+    border-radius: $radius_l
     color: $color-black
     margin: 0
     outline: none
