--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -29,7 +29,7 @@
     width: 90%
 
   +e('content')
-    @include border-radius($radius-default)
+    @include border-radius($radius_l)
     background-clip: padding-box
     background: $color-white
     border: 6px solid $color-primary
