--- a/src/styles/modules/_m-search-form.sass
+++ b/src/styles/modules/_m-search-form.sass
@@ -1,7 +1,7 @@
 +b(search-form)
   padding: $space-m
   background: $color-gray
-  border-radius: $radius-default
+  border-radius: $radius_l
   border-top: 10px solid $color-primary
 
   h3
