--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -1,7 +1,7 @@
 +b(textarea)
   +reset
   +border(1px solid $color-gray-light)
-  +rem-fallback('border-radius', $radius-default)
+  +rem-fallback('border-radius', $radius_l)
   +rem-fallback('font-size', $font-size-m)
   +rem-fallback('height', 240px)
   +rem-fallback('padding', $space-s)
