--- a/src/styles/modules/_m-fieldgroup.sass
+++ b/src/styles/modules/_m-fieldgroup.sass
@@ -28,17 +28,17 @@
         margin-left: -1px
 
       &:first-child
-        border-top-left-radius: $radius-default
-        border-bottom-left-radius: $radius-default
+        border-top-left-radius: $radius_l
+        border-bottom-left-radius: $radius_l
 
         .#{$prefix-component}text-field__input
-          border-top-left-radius: $radius-default
-          border-bottom-left-radius: $radius-default
+          border-top-left-radius: $radius_l
+          border-bottom-left-radius: $radius_l
 
       &:last-child
-        border-top-right-radius: $radius-default
-        border-bottom-right-radius: $radius-default
+        border-top-right-radius: $radius_l
+        border-bottom-right-radius: $radius_l
 
         .#{$prefix-component}text-field__input
-          border-top-right-radius: $radius-default
-          border-bottom-right-radius: $radius-default
+          border-top-right-radius: $radius_l
+          border-bottom-right-radius: $radius_l
