--- a/src/styles/modules/_m-infobox.sass
+++ b/src/styles/modules/_m-infobox.sass
@@ -2,7 +2,7 @@
   position: relative
   width: 100%
   background-color: $color-gray
-  border-radius: $radius-default
+  border-radius: $radius_l
   +rem-fallback('padding', $space-xxs $space-xs)
   +rem-fallback('margin-top', $space-s)
 
