--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -1,6 +1,6 @@
 +b(pet-card)
   background: $color-gray-lighter
-  border-radius: $radius-default
+  border-radius: $radius_l
   box-shadow: 0 0 4px #b3b3b3
   padding: $space-xxs
   display: grid
@@ -10,7 +10,7 @@
     display: block
 
   a
-    border-radius: $radius-default
+    border-radius: $radius_l
     position: relative
     height: auto
 
@@ -23,8 +23,8 @@
       bottom: 0
       left: 0
       right: 0
-      border-bottom-left-radius: $radius-default
-      border-bottom-right-radius: $radius-default
+      border-bottom-left-radius: $radius_l
+      border-bottom-right-radius: $radius_l
       color: $color-white
       text-align: center
       font-size: $font-size-xs
