--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -13,11 +13,11 @@
     margin: 0
     +rem-fallback('margin-top', 10px)
     position: relative
-    border: 1px solid $color-gray-light
-    border-radius: $radius-default
+    border: 1px solid $color-gray-darker
+    border-radius: $radius_l
 
     &--selected
-      border: 1px solid color(ablue, base)
+      border: 1px solid $color_primary
 
   +element('icon')
     display: block
@@ -35,23 +35,23 @@
     +rem-fallback('right', 10px)
 
     &:hover ~ .#{$prefix-component}radio-box__outside
-      border: 2px solid color(ablue, base)
+      border: 2px solid $color_primary
 
       &.#{$prefix-component}radio-box__outside--color-blue
-        border: 2px solid color(awhite, base)
+        border: 2px solid $color_white
 
         &::before
-          background: color(awhite, base)
+          background: $color_white
 
     &:disabled+.#{$prefix-component}radio-box__label
-      color: $color-gray-lighter
+      color: $color-gray-dark
 
     &:disabled ~ .#{$prefix-component}radio-box__outside
       &::before
         background: transparent
 
       &:hover
-        border: 2px solid color(ablue, base)
+        border: 2px solid $color_primary
 
       &.#{$prefix-component}radio-box__outside--color-blue,
       &.#{$prefix-component}radio-box__outside--color-grey,
@@ -64,10 +64,10 @@
 
     &:disabled+.#{$prefix-component}radio-box__label--color-grey,
     &:disabled+.#{$prefix-component}radio-box__label--color-ltgrey
-      color: $color-gray-light
+      color: $color-gray-darker
 
     &:checked ~ .#{$prefix-component}radio-box__outside
-      border: 2px solid color(ablue, base)
+      border: 2px solid $color_primary
 
       &::before
         height: 13px
@@ -77,7 +77,7 @@
 
     &:checked ~ .#{$prefix-component}radio-box__outside--color-blue
       &.#{$prefix-component}radio-box__outside
-        border: 2px solid color(awhite, base)
+        border: 2px solid $color_white
 
         &::before
           height: 13px
@@ -92,24 +92,24 @@
     &:disabled ~ .#{$prefix-component}radio-box__outside--color-grey,
     &:disabled ~ .#{$prefix-component}radio-box__outside--color-ltgrey
       &.#{$prefix-component}radio-box__outside
-        border: 2px solid $color-gray-light
+        border: 2px solid $color-gray-darker
 
     &:disabled ~ .#{$prefix-component}radio-box__outside--color-white
       &.#{$prefix-component}radio-box__outside
-        border: 2px solid $color-gray-lighter
+        border: 2px solid $color-gray-dark
 
     &:checked ~ .#{$prefix-component}radio-box__outside
       &::before
-        background: color(ablue, base)
+        background: $color_primary
 
     &:checked ~ .#{$prefix-component}radio__outside--color-blue
       &.#{$prefix-component}radio-box__outside
         &::before
-          background: color(awhite, base)
+          background: $color_white
 
   +element('label')
     +rem-fallback('font-size', $font-size-xs)
-    +rem-fallback('border-radius', $radius-default)
+    +rem-fallback('border-radius', $radius_l)
     +rem-fallback('line-height', $line-height-xs-v2)
     display: inline-block
     font-weight: $font-weight-light
@@ -125,7 +125,7 @@
   +element('outside')
     display: block
     position: absolute
-    border: 2px solid $color-gray-light
+    border: 2px solid $color-gray-darker
     border-radius: 100%
     +rem-fallback('padding', 8.5px)
     +rem-fallback('top', 10px)
@@ -144,31 +144,31 @@
 
     &--color-blue
       &.#{$prefix-component}radio-box__outside
-        border: 2px solid color(awhite, base)
+        border: 2px solid $color_white
 
   +element('item')
-    background: color(awhite, base)
+    background: $color_white
 
     +m('not-selected')
-      border: 1px solid $color-gray-lighter
+      border: 1px solid $color-gray-dark
 
       .#{$prefix-component}radio-box__icon
         svg
           path
-            fill: $color-gray-lighter
+            fill: $color-gray-dark
 
       .#{$prefix-component}radio-box__button
         &:hover ~ .#{$prefix-component}radio-box__outside
-          border: 2px solid color(ablue, base)
+          border: 2px solid $color_primary
 
           &.#{$prefix-component}radio-box__outside--color-blue
-            border: 2px solid color(awhite, base)
+            border: 2px solid $color_white
 
             &::before
-              background: color(awhite, base)
+              background: $color_white
 
       .#{$prefix-component}radio-box__label
-        color: $color-gray-lighter
+        color: $color-gray-dark
 
       .#{$prefix-component}radio-box__outside
-        border: 2px solid $color-gray-lighter
+        border: 2px solid $color-gray-dark
