--- a/src/styles/modules/_m-tooltip.sass
+++ b/src/styles/modules/_m-tooltip.sass
@@ -9,7 +9,7 @@
     margin-right: 0
     right: 0
     background: $color-white
-    border-radius: $radius-default
+    border-radius: $radius_l
     box-shadow: $shadow-callout
     position: relative
     display: inline-block
