HB-5116: progress restyling NPASignupForm

--- a/src/styles/modules/_m-paragraph.sass
+++ b/src/styles/modules/_m-paragraph.sass
@@ -3,7 +3,7 @@ $sizes: ( xxs: $font-size-xxs, xs: $font-size-xs, s: $font-size-s, m: $font-size
 +b('paragraph')
   letter-spacing: $letter-spacing-default
   font-weight: $font-weight-normal
-  margin-bottom: 40px
+  margin-bottom: $space-s
 
   a
     font-weight: $font-weight-bold
