HB-5116: implemented payment form style

--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -28,5 +28,5 @@
 @import 'm-vdivider';
 @import 'm-banner';
 @import 'm-infobox';
-// @import 'm-payment-form';
+@import 'm-payment-form';
 @import 'm-table-of-contents';
