--- a/src/styles/modules/_m-button.sass
+++ b/src/styles/modules/_m-button.sass
@@ -10,6 +10,7 @@
   cursor: pointer
   line-height: 2.7
   width: 100%
+  +rem-fallback('max-width', 360px)
   transition: background $duration_medium ease
   margin: 0 auto
   padding: 0
@@ -97,6 +98,7 @@
   +modifier('text-color')
     &-fb
       color: $color-facebook
+      max-width: none
 
       &:hover,
       &.hover
@@ -106,6 +108,7 @@
 
     &-google
       color: $color-google
+      max-width: none
 
       &:hover,
       &.hover
