--- a/src/styles/modules/_m-login-form.sass
+++ b/src/styles/modules/_m-login-form.sass
@@ -38,3 +38,7 @@
       padding: 0 $space-xxs
       position: relative
       top: -.85em
+
+  .login-meta
+    +rem-fallback('max-width', 360px)
+    margin: 0 auto
