HB-5168: All paragraphs in

--- a/src/styles/modules/_m-payment-form.scss
+++ b/src/styles/modules/_m-payment-form.scss
@@ -200,6 +200,10 @@
   @include element('text-orange') {
     color: color(aorange) !important;
   }
+
+  @include element('terms-and-conditions') {
+    font-weight: bold;
+  }
 }
 
 .StripeElement {
