--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -9,7 +9,7 @@
     +rem-fallback('grid-column-gap', 25px)
 
   +element('item')
-    @include rem-fallback('padding', 15px 10px)
+    @include rem-fallback('padding', $space_m)
     margin: 0
     +rem-fallback('margin-top', 10px)
     position: relative
