HB-5099: replaced styles and removed legacy styles

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -7,7 +7,7 @@
     font-family: $font
     font-weight: $font_weight_normal
     font-size: $base-font-size
-    color: $preset-body-color
+    color: $color_black
     line-height: 1.5
     text-decoration: none
 
