--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -60,7 +60,7 @@
           background: transparent
 
     &:disabled+.#{$prefix-component}radio-box__label--color-blue
-      color: $ablue-light
+      color: $color_primary
 
     &:disabled+.#{$prefix-component}radio-box__label--color-grey,
     &:disabled+.#{$prefix-component}radio-box__label--color-ltgrey
@@ -87,7 +87,7 @@
 
     &:disabled ~ .#{$prefix-component}radio-box__outside--color-blue
       &.#{$prefix-component}radio-box__outside
-        border: 2px solid $ablue-light
+        border: 2px solid $color_primary
 
     &:disabled ~ .#{$prefix-component}radio-box__outside--color-grey,
     &:disabled ~ .#{$prefix-component}radio-box__outside--color-ltgrey
