--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -6,7 +6,7 @@
   +rem-fallback('height', 240px)
   +rem-fallback('padding', $space-s)
   +rem-fallback('padding-top', $space-l)
-  box-shadow: $text-field-shade
+  box-shadow: $color_gray
   color: $color-black
   display: flex
   height: 100%
