--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -85,7 +85,7 @@
 
   +element('h4')
     +rem-fallback('font-size', $font-size-m)
-    font-family: $helvetica
+    font-family: $font
     color: $color-black
     font-weight: $font-weight-normal
     +rem-fallback('line-height', $line-height-m)
@@ -119,7 +119,7 @@
 
   +element('h5')
     +rem-fallback('font-size', $font-size-s)
-    font-family: $helvetica
+    font-family: $font
     color: $color-black
     font-weight: $font-weight-normal
     +rem-fallback('line-height', $line-height-s)
@@ -143,7 +143,7 @@
 
   +element('h6')
     +rem-fallback('font-size', $font-size-xs)
-    font-family: $helvetica
+    font-family: $font
     color: $color-black
     font-weight: $font-weight-normal
     +rem-fallback('line-height', $line-height-xs)
