--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -40,7 +40,7 @@
           background: transparent
 
     &:disabled+.#{$prefix-component}radio__label--color-blue
-      color: $ablue-light
+      color: $color_primary
 
     &:disabled+.#{$prefix-component}radio__label--color-grey,
     &:disabled+.#{$prefix-component}radio__label--color-ltgrey
@@ -66,7 +66,7 @@
 
     &:disabled ~ .#{$prefix-component}radio__outside--color-blue
       &.#{$prefix-component}radio__outside
-        border: 2px solid $ablue-light
+        border: 2px solid $color_primary
 
     &:disabled ~ .#{$prefix-component}radio__outside--color-grey,
     &:disabled ~ .#{$prefix-component}radio__outside--color-ltgrey
