--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,9 +8,8 @@
 
 @import "~@aap/flexed/flexed/flexed";
 
-@import "legacy/index";
-
 @import "./base";
+@import "./breakpoints";
 @import "./functions";
 @import "./grid";
 @import "./mixins";
@@ -18,5 +17,3 @@
 @import "./font-faces";
 
 @import "modules/index";
-
-// @include reset;
