--- a/src/styles/modules/_m-payment-form.scss
+++ b/src/styles/modules/_m-payment-form.scss
@@ -59,6 +59,8 @@
       background-color: black;
     }
 
+    @include rem-fallback('margin-bottom', 20px);
+
     @include breakpoint(tablet-plus) {
       @include column(8/12);
     }
