HB-5099: progress with add inverted colors to checkboxes

--- a/src/styles/modules/_m-button.sass
+++ b/src/styles/modules/_m-button.sass
@@ -117,7 +117,7 @@
         color: $color-white
 
   &[disabled]
-    background-color: $color-gray-lighter
+    background-color: $color-gray
     border: 0
     line-height: 2.9
     cursor: not-allowed
