--- a/docs/docs.styles.scss
+++ b/docs/docs.styles.scss
@@ -350,18 +350,18 @@ div[class^="rsg--sidebar"] {
 --------------------------------------------- */
 
 // Previews of the components
-div[class^="rsg--preview"] {
-  padding: $space-l / 1.2;
-  background-color: tint($docs-grey, 90%);
-  border: 1px solid tint($docs-grey, 50%);
-  box-shadow: inset 0 0 $space-xs rgba($color-rich-black, 0.05);
-  margin: $space-s 0 0;
-  border-radius: 0;
-  display: block;
-  width: 100%;
-  border-top-left-radius: $radius-default;
-  border-top-right-radius: $radius-default;
-}
+// div[class^="rsg--preview"] {
+//   padding: $space-l / 1.2;
+//   background-color: tint($docs-grey, 90%);
+//   border: 1px solid tint($docs-grey, 50%);
+//   box-shadow: inset 0 0 $space-xs rgba($color-rich-black, 0.05);
+//   margin: $space-s 0 0;
+//   border-radius: 0;
+//   display: block;
+//   width: 100%;
+//   border-top-left-radius: $radius-default;
+//   border-top-right-radius: $radius-default;
+// }
 
 // If you edit the component categories, you have to edit
 // these to match as well.
