HB-5168: Remove accidental semicolons in SASS

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -42,18 +42,18 @@
     margin-top: 135px
 
   +e(terms-paragraph)
-    +rem-fallback('margin', 10px 0px 20px 0px);
+    +rem-fallback('margin', 10px 0px 20px 0px)
     +rem-fallback('letter-spacing', -0.25px !important)
 
   +e(terms-heading)
-    +rem-fallback('margin', 10px 0px 20px 0px);
+    +rem-fallback('margin', 10px 0px 20px 0px)
     +rem-fallback('letter-spacing', -0.25px)
 
   &--payment-terms
     grid-template-columns: 1fr
 
   +e(donation-link)
-    font-weight: bold;
+    font-weight: bold
 
 +b(npa-signup-whatisthis)
   +breakpoint(tablet-plus)
