HB-5116: replacing dashes with underscores in sass variables

--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -88,7 +88,7 @@
 
   +e(error-msg)
     +rem-fallback('font-size', $font-size-xs)
-    +rem-fallback('line-height', $line-height-s-v2)
+    +rem-fallback('line-height', $line_height_s_v2)
     +rem-fallback('right', $space-xs)
     +rem-fallback('top', $space-xxxxs)
     color: $color-warning
@@ -107,13 +107,13 @@
       +is(smaller)
         +rem-fallback('font-size', $font-size-xs)
         +rem-fallback('left', $space-xs)
-        +rem-fallback('line-height', $line-height-s-v2)
+        +rem-fallback('line-height', $line_height_s_v2)
         +rem-fallback('top', $space-xxxxs)
         font-weight: $font-weight-bold
 
     +m(right)
       +rem-fallback('font-size', $font-size-xs)
-      +rem-fallback('line-height', $line-height-s-v2)
+      +rem-fallback('line-height', $line_height_s_v2)
       position: initial
       float: left
       font-weight: $font-weight-bold
