--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -61,10 +61,10 @@
       line-height: $line-height-l
 
     &--compact
-      +rem-fallback('line-height', $line-height-l-v2)
+      +rem-fallback('line-height', $line_height_l_v2)
 
     &--x-compact
-      +rem-fallback('line-height', $line-height-l-v2)
+      +rem-fallback('line-height', $line_height_l_v2)
 
     &--special
       font-family: $font-special
@@ -92,10 +92,10 @@
     +rem-fallback('letter-spacing', $letter-spacing-default)
 
     &--compact
-      +rem-fallback('line-height', $line-height-m-v2)
+      +rem-fallback('line-height', $line_height_m_v2)
 
     &--x-compact
-      +rem-fallback('line-height', $line-height-m-v3)
+      +rem-fallback('line-height', $line_height_m_v3)
 
     &--x-x-compact
       +rem-fallback('line-height', $line-height-m)
@@ -125,7 +125,7 @@
     +rem-fallback('line-height', $line-height-s)
 
     &--compact
-      +rem-fallback('line-height', $line-height-s-v2)
+      +rem-fallback('line-height', $line_height_s_v2)
 
     &--x-compact
       +rem-fallback('line-height', $line-height-s)
@@ -149,7 +149,7 @@
     +rem-fallback('line-height', $line-height-xs)
 
     &--compact
-      +rem-fallback('line-height', $line-height-xs-v2)
+      +rem-fallback('line-height', $line_height_xs_v2)
 
     &--x-compact
       +rem-fallback('line-height', $line-height-xs)
