--- a/src/styles/modules/_m-password-forgot.sass
+++ b/src/styles/modules/_m-password-forgot.sass
@@ -19,4 +19,4 @@
         +rem-fallback('padding-left', $space-xxl)
 
       h3
-        +rem-fallback('line-height', $line-height-l-v2)
+        +rem-fallback('line-height', $line_height_l_v2)
