--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -89,7 +89,7 @@
   +element('label')
     +rem-fallback('font-size', $font-size-m)
     +rem-fallback('border-radius', $radius_l)
-    +rem-fallback('line-height', $line-height-m-v2)
+    +rem-fallback('line-height', $line_height_m_v2)
     +rem-fallback('padding-left', $space-l)
     +rem-fallback('top', -2px)
     position: relative
