--- a/src/styles/modules/_m-radio-group-box.sass
+++ b/src/styles/modules/_m-radio-group-box.sass
@@ -110,7 +110,7 @@
   +element('label')
     +rem-fallback('font-size', $font-size-xs)
     +rem-fallback('border-radius', $radius_l)
-    +rem-fallback('line-height', $line-height-xs-v2)
+    +rem-fallback('line-height', $line_height_xs_v2)
     display: inline-block
     font-weight: $font-weight-light
     text-align: center
