--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -40,7 +40,7 @@
 
   +e(error-msg)
     @include rem-fallback('font-size', $font-size-xs)
-    @include rem-fallback('line-height', $line-height-xs-v2)
+    @include rem-fallback('line-height', $line_height_xs_v2)
     @include rem-fallback('right', $space-xs)
     @include rem-fallback('top', $space-xxxxs)
     color: $color-warning
